fix: fix packaging method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "$lib/*": [
         "src/lib/*"
+      ],
+      "$static/*": [
+        "src/static/*"
       ]
     }
   },
