--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extension-post",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,5 +20,8 @@
     "tslib": "^2.5.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.4"
+  },
+  "dependencies": {
+    "nunui": "^0.0.70"
   }
 }
